<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBackground"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        tools:context=".views.DetailsActivity">


        <TextView
            android:id="@+id/txt_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp"
            android:text="TextView"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:fontFamily="@font/folkslight" />

                <LinearLayout
                    android:id="@+id/relative_photo_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="15dp"
                    android:paddingLeft="15dp"
                    android:paddingEnd="15dp"
                   >

                    <ImageView
                        android:id="@+id/img_capa_det"
                        android:layout_width="129dp"
                        android:layout_height="205dp"
                        app:srcCompat="@drawable/placeholder" />


                    <LinearLayout
                        android:layout_width="241dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingStart="15dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="17dp"
                            android:text="@string/titulo_original"
                            android:textColor="@color/ColorLightGray" />

                        <TextView
                            android:id="@+id/txt_originaltitulo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textSize="18sp"
                            android:textColor="@color/ColorwWhite"
                            app:fontFamily="@font/folkslight" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/data_lancamento"
                            android:textColor="@color/ColorLightGray" />

                        <TextView
                            android:id="@+id/txt_det_datalancamento"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textSize="18sp"
                            android:textColor="@color/ColorwWhite"
                            app:fontFamily="@font/folkslight" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="17dp"
                            android:text="@string/popularidade"
                            android:textColor="@color/ColorLightGray" />

                        <TextView
                            android:id="@+id/txt_det_popularity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textSize="18sp"
                            android:textColor="@color/ColorwWhite"
                            app:fontFamily="@font/folkslight" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="17dp"
                            android:text="@string/idioma_original"
                            android:textColor="@color/ColorLightGray" />

                        <TextView
                            android:id="@+id/txt_det_originallan"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textSize="18sp"
                            android:textColor="@color/ColorwWhite"
                            app:fontFamily="@font/folkslight" />


                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vote_average"
                            android:textColor="@color/ColorLightGray" />


                        <TextView
                            android:id="@+id/txt_det_vote"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textSize="18sp"
                            android:textColor="@color/ColorwWhite"
                            app:fontFamily="@font/folkslight" />


                    </LinearLayout>

                </LinearLayout>

        <View
            android:id="@+id/viewlinha2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sinopse"
            android:textColor="@color/ColorLightGray"
            android:textSize="20sp"
            app:fontFamily="@font/bebas"
            android:layout_marginTop="15dp"

            />

        <TextView
            android:id="@+id/txt_det_sinopse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            app:fontFamily="@font/folkslight"
            android:textSize="18sp"
            android:lineSpacingExtra="5dp"
            android:text="-"
            android:textColor="@color/ColorwWhite" />

    </LinearLayout>


</ScrollView>